--- a/packages/ui/branch-dropdown/src/index.less
+++ b/packages/ui/branch-dropdown/src/index.less
@@ -21,7 +21,7 @@
             position: absolute;
             top: 16px;
             left: 190px;
-            color: var(--color-gray-9);
+            color: var(--theme-text-color);
         }
 
         .osui-icon {
@@ -34,13 +34,13 @@
         &.ant-dropdown-open,
         &:hover,
         &:focus {
-            color: var(--color-gray-9);
+            color: var(--theme-text-color);
             background: var(--color-gray-1);
             border-color: var(--color-brand-4);
         }
 
         .title {
-            color: var(--color-gray-9);
+            color: var(--theme-text-color);
             font-size: 12px;
             margin-bottom: 0;
             text-align: left;
@@ -88,7 +88,7 @@
                 span {
                     width: 242px;
                     height: 20px;
-                    color: var(--color-gray-9);
+                    color: var(--theme-text-color);
                     margin-bottom: 0;
                     text-align: left;
                     overflow: hidden;
