--- a/packages/ui/collapse/src/index.less
+++ b/packages/ui/collapse/src/index.less
@@ -7,7 +7,7 @@
 
     .ant-collapse-item {
         .ant-collapse-header {
-            color: var(--theme-heading-color);
+            color: var(--theme-text-color);
             font-weight: 600;
             font-size: 14px;
             padding-top: 0;
