--- a/packages/ui/date-picker/src/index.less
+++ b/packages/ui/date-picker/src/index.less
@@ -2,11 +2,11 @@
 
 .@{osui-picker-class-prefix} {
     .ant-picker-suffix {
-        color: var(--color-gray-8);
+        color: var(--theme-text-color);
     }
 
     &.ant-picker-disabled {
-        border-color: var(--color-gray-3);
+        border-color: var(--color-gray-6);
         background: none;
     }
 
