--- a/packages/ui/modal/src/index.less
+++ b/packages/ui/modal/src/index.less
@@ -48,7 +48,7 @@
 
             .ant-modal-close-icon {
                 font-size: 14px;
-                color: var(--theme-heading-color);
+                color: var(--theme-text-color);
             }
         }
     }
