--- a/packages/ui/popover/src/index.less
+++ b/packages/ui/popover/src/index.less
@@ -1,7 +1,7 @@
 @osui-popover-class-prefix: osui-popover;
 
 .@{osui-popover-class-prefix} {
-    color: var(--color-gray-9);
+    color: var(--theme-text-color);
 
     .ant-popover-content {
         max-width: 400px;
@@ -16,11 +16,6 @@
 
     .ant-popover-inner-content {
         padding: 0 16px 16px;
-        color: var(--color-gray-9);
+        color: var(--theme-text-color);
     }
-
-    .ant-btn,Button {
-        padding: 0;
-    }
-
 }
