--- a/packages/ui/tag/src/index.less
+++ b/packages/ui/tag/src/index.less
@@ -35,15 +35,14 @@
         color: var(--tag-font-color);
         background: var(--tag-yellow-color);
     }
-
 }
 
 .@{osui-tag-class-prefix}-checkable {
     border: 2px solid transparent;
 
     &.ant-tag-checkable-checked {
-        background:  var(--color-brand-1);
-        border:2px solid var(--color-brand-4);
+        background: var(--color-brand-1);
+        border: 2px solid var(--color-brand-4);
         color: @text-color;
     }
 }
@@ -51,10 +50,10 @@
 /* 边框虚线示例 */
 .osui-tag-dome-dashed {
     background: #fff;
-    border: 1px solid rgba(218,222,227,1);
+    border: 1px solid rgba(218, 222, 227, 1);
     border-style: dashed;
 
     &:hover {
-        background: #F5F6F8;
+        background: var(--color-gray-3);
     }
 }
