--- a/packages/ui/select/src/index.less
+++ b/packages/ui/select/src/index.less
@@ -26,7 +26,7 @@
 
         svg {
             font-size: @font-size-lg;
-            color: var(--color-gray-9);
+            color: var(--theme-text-color);
         }
     }
 
