--- a/packages/ui/tabs/src/index.less
+++ b/packages/ui/tabs/src/index.less
@@ -14,12 +14,12 @@
     }
 
     .ant-tabs-tab .ant-tabs-tab-btn em.num {
-        background: #f5f6f8;
+        background: var(--color-gray-3);
         border-radius: 10px;
         width: 25px;
         height: 20px;
         font-size: 12px;
-        color: var(--color-gray-9);
+        color: var(--theme-text-color);
         line-height: 20px;
         display: inline-block;
         text-align: center;
