--- a/packages/ui/button/src/index.less
+++ b/packages/ui/button/src/index.less
@@ -207,14 +207,14 @@
         }
 
         &:focus {
-            color: transparent;
+            color: var(--theme-text-color);
             border-radius: 4px;
             border: 1px solid var(--color-brand-4);
             box-shadow: 0 0 0 1px var(--theme-border-focus-color);
         }
 
         &:active {
-            color: transparent;
+            color: var(--theme-text-color);
         }
 
         &[disabled] {
