--- a/packages/ui/form/src/index.less
+++ b/packages/ui/form/src/index.less
@@ -1,6 +1,10 @@
 @osui-form-class-prefix: osui-form;
 
 .@{osui-form-class-prefix} {
+    .ant-form-item-explain {
+        font-size: 12px;
+    }
+
     .ant-form-item-has-error .ant-form-item-explain {
         div::before {
             display: inline-block;
