--- a/packages/ui/menu-dropdown/src/index.less
+++ b/packages/ui/menu-dropdown/src/index.less
@@ -2,6 +2,14 @@
 
 @osui-menu-dropdown-class-prefix: osui-menu-dropdown;
 
+.@{osui-menu-dropdown-class-prefix} {
+    &-expand-icon {
+        position: absolute;
+        right: 8px;
+        top: 8px;
+    }
+}
+
 .@{osui-menu-dropdown-class-prefix}-menu {
     &.ant-dropdown-menu-submenu-popup ul {
         margin-left: -8px;
