--- a/packages/ui/switch/src/index.less
+++ b/packages/ui/switch/src/index.less
@@ -27,4 +27,8 @@
         animation: none;
         animation-fill-mode: none;
     }
+
+    &.ant-switch:focus {
+        box-shadow: 0 0 0 2px var(--theme-border-focus-color);
+    }
 }
