--- a/packages/ui/tag/src/index.less
+++ b/packages/ui/tag/src/index.less
@@ -3,6 +3,11 @@
 .@{osui-tag-class-prefix} {
     border: 1px solid transparent;
 
+    svg {
+        height: 12px;
+        vertical-align: -.125em;
+    }
+
     &:hover {
         background: var(--theme-bg-color-base);
     }
