--- a/packages/ui/toggle-button/src/index.less
+++ b/packages/ui/toggle-button/src/index.less
@@ -10,7 +10,7 @@
     }
 
     &.ant-btn {
-        border: none;
+        border: 1px solid transparent;
         box-shadow: none;
         color: var(--theme-text-color);
         padding-left: 12px;
