--- a/packages/ui/modal/src/index.less
+++ b/packages/ui/modal/src/index.less
@@ -45,9 +45,13 @@
     .ant-modal-content {
         .ant-modal-close {
             top: 8px;
+            right: 3px;
+
+            svg {
+                height: 24px;
+            }
 
             .ant-modal-close-icon {
-                font-size: 14px;
                 color: var(--theme-text-color);
             }
         }
