--- a/packages/ui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/src/antd-vars-patch.less
@@ -111,6 +111,7 @@
 @select-item-selected-bg: var(--select-item-selected-bg);
 @select-item-active-bg: var(--item-hover-bg); // 这个是item hover的颜色
 @select-item-selected-font-weight: normal;
+@select-selection-item-bg: var(--color-gray-3);
 
 // Alert
 // ---
@@ -173,6 +174,10 @@
 // ---
 @tabs-active-color: var(--link-color);
 @tabs-hover-color: var(--link-color);
+
+// Box-shadow
+// ---
+@shadow-2: var(--shadow-2);
 
 // 自定义的一些less变量patch，放在最下面
 // ----
