--- a/packages/ui/tooltip/src/index.less
+++ b/packages/ui/tooltip/src/index.less
@@ -1,6 +1,10 @@
 @osui-tooltip-class-prefix: osui-tooltip;
 
 .@{osui-tooltip-class-prefix} {
+    .ant-tooltip-content {
+        box-shadow: var(--shadow-1);
+    }
+
     &.ant-tooltip-placement-top .ant-tooltip-arrow,
     &.ant-tooltip-placement-topLeft .ant-tooltip-arrow,
     &.ant-tooltip-placement-topRight .ant-tooltip-arrow,
