--- a/packages/ui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/src/antd-vars-patch.less
@@ -179,6 +179,10 @@
 // ---
 @shadow-2: var(--shadow-2);
 
+// Timeline
+// ---
+@timeline-color: var(--color-gray-7);
+
 // 自定义的一些less变量patch，放在最下面
 // ----
 @height-s: 24px;
