--- a/packages/ui/form/src/index.less
+++ b/packages/ui/form/src/index.less
@@ -3,6 +3,11 @@
 .@{osui-form-class-prefix} {
     .ant-form-item-explain {
         font-size: 12px;
+
+        .alert {
+            display: flex;
+            align-items: center;
+        }
     }
 
     .ant-form-item-has-error .ant-form-item-explain {
