--- a/packages/ui/popover/src/index.less
+++ b/packages/ui/popover/src/index.less
@@ -9,13 +9,14 @@
     }
 
     .ant-popover-title {
-        padding: 16px 16px 8px;
+        padding: 16px 16px 0 16px;
+        margin-bottom: -8px;
         border: none;
         font-size: 16px;
     }
 
     .ant-popover-inner-content {
-        padding: 0 16px 16px;
+        padding: 16px;
         color: var(--theme-text-color);
     }
 }
