--- a/packages/ui/form/src/index.less
+++ b/packages/ui/form/src/index.less
@@ -4,7 +4,7 @@
     .ant-form-item-explain {
         font-size: 12px;
 
-        .alert {
+        [role="alert"] {
             display: flex;
             align-items: center;
         }
