--- a/packages/ui/select/src/index.less
+++ b/packages/ui/select/src/index.less
@@ -73,6 +73,10 @@
     .ant-select-selection-item .ant-select-selection-item-remove {
         color: var(--color-gray-6);
     }
+
+    .ant-select-selection-item {
+        border: 1px solid var(--color-gray-3);
+    }
 }
 
 // 多选下拉移动到左边，
