--- a/packages/ui/checkbox/src/index.less
+++ b/packages/ui/checkbox/src/index.less
@@ -35,10 +35,15 @@
         border-color: var(--theme-border-color-base);
         animation: none;
         animation-fill-mode: none;
+        transition: none;
     }
 
     .ant-checkbox-disabled .ant-checkbox-inner {
         background-color: #fff;
+    }
+
+    .ant-checkbox-checked .ant-checkbox-inner::after {
+        transition: none;
     }
 
     &-group {
