--- a/packages/ui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/src/antd-vars-patch.less
@@ -179,6 +179,15 @@
 // ---
 @shadow-2: var(--shadow-1);
 
+// Avatar
+// --
+@avatar-size-sm: 16px;
+@avatar-size-base: 24px;
+@avatar-size-lg: 32px;
+@avatar-font-size-sm: 12px;
+@avatar-font-size-base: 12px;
+@avatar-font-size-lg: 14px;
+
 // 自定义的一些less变量patch，放在最下面
 // ----
 @height-s: 24px;
