--- a/packages/ui/avatar/src/index.less
+++ b/packages/ui/avatar/src/index.less
@@ -1,28 +1,9 @@
 @osui-back-top-class-prefix: osui-avatar;
 
 .@{osui-back-top-class-prefix} {
-    position: relative;
-    display: inline-block;
-
-    &-l {
-        font-size: 14px;
-        width: 32px;
-        height: 32px;
-        line-height: 32px;
-    }
-
-    &-m {
-        font-size: 11px;
-        width: 24px;
-        height: 24px;
-        line-height: 24px;
-    }
-
-    &-s {
-        font-size: 11px;
-        width: 16px;
-        height: 16px;
-        line-height: 16px;
+    &-wrapper {
+        position: relative;
+        display: inline-block;
     }
 
     &-pr {
