fix: 调整example，@osui/ui 修复导出命名出错的问题

--- a/examples/reskript/my-app/src/styles/app.global.less
+++ b/examples/reskript/my-app/src/styles/app.global.less
@@ -1,3 +1,6 @@
+@import '~@osui/theme/dist/theme/vars.css';
+@import '~@osui/theme/dist/antd4-styles-patch.css';
+
 * {
     box-sizing: border-box;
 }
