--- a/packages/ui/checkbox/src/index.less
+++ b/packages/ui/checkbox/src/index.less
@@ -49,7 +49,7 @@
     &-group {
         .ant-checkbox-inner,
         .ant-checkbox-checked::after {
-            border-radius: 4px;
+            border-radius: @border-radius-base;
             animation: none;
             animation-fill-mode: none;
         }
