--- a/packages/ui-theme/osui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/osui-theme/src/antd-vars-patch.less
@@ -66,10 +66,9 @@
 
 // Input
 // ---
-@input-height-sm: @height-s;
-@input-height-base: @height-m;
-@input-height-lg: @height-l;
-@input-height-xl: @height-xl;
+@input-height-sm: @height-sm;
+@input-height-base: @height-base;
+@input-height-lg: @height-lg;
 @input-hover-border-color: var(--theme-border-color-base);
 @input-placeholder-color: var(--theme-placeholder-color);
 
@@ -184,12 +183,11 @@
 @avatar-font-size-base: 12px;
 @avatar-font-size-lg: 14px;
 
+@height-base: 32px;
+@height-lg: 40px;
+@height-sm: 24px;
+
 // 自定义的一些less变量patch，放在最下面
-// ----
-@height-s: 24px;
-@height-m: 30px;
-@height-l: 40px;
-@height-xl: 50px;
 
 // Tag
 @tag-default-bg: var(--tag-default-bg);
