--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -66,9 +66,9 @@
 
 // Input
 // ---
-@input-height-sm: @height-s;
-@input-height-base: @height-m;
-@input-height-lg: @height-l;
+@input-height-sm: @height-sm;
+@input-height-base: @height-base;
+@input-height-lg: @height-lg;
 @input-hover-border-color: var(--theme-primary-color-hover);
 @input-placeholder-color: var(--theme-placeholder-color);
 
@@ -143,7 +143,7 @@
 @btn-primary-color: var(--color-gray-1);
 @btn-primary-bg: var(--color-brand-6);
 @btn-shadow: 0 2px 0 rgba(0, 0, 0, 0);
-@btn-line-height: 23px;
+@btn-line-height: 21px;
 @btn-disable-color: var(--btn-disable-color);
 @btn-disable-bg: var(--btn-disable-bg);
 @btn-disable-border: var(--btn-disable-border);
@@ -185,12 +185,11 @@
 @avatar-font-size-base: 12px;
 @avatar-font-size-lg: 14px;
 
+@height-base: 30px;
+@height-lg: 40px;
+@height-sm: 24px;
+
 // 自定义的一些less变量patch，放在最下面
-// ----
-@height-s: 24px;
-@height-m: 30px;
-@height-l: 40px;
-@height-xl: 50px;
 
 // Tag
 @tag-default-bg: var(--tag-default-bg);
